--- a/src/assets/stylesheets/myTheme/_form.scss
+++ b/src/assets/stylesheets/myTheme/_form.scss
@@ -1,3 +1,36 @@
 .form {
   background-image: url("../images/myImages/bgc2.png");
+  &__container {
+    min-height: 826px;
+  }
+  h3 {
+    padding-top: 50px;
+    padding-bottom: 20px;
+    margin: 0;
+  }
+  p {
+    padding-top: 15px;
+    padding-bottom: 50px;
+    margin: 0;
+  }
+  &__input {
+    margin-bottom: 35px;
+    width: 100%;
+    font-family: "Opena Sans", sans-serif;
+    font-size: 21px;
+    padding: 10px 20px;
+    background-color: $form-bgc;
+    border: 2px solid $form-border;
+    color: $form-border;
+  }
+  &__textarea {
+    color: $form-border;
+    width: 100%;
+    font-family: "Opena Sans", sans-serif;
+    font-size: 21px;
+    padding: 10px 20px;
+    margin-bottom: 30px;
+    background-color: $form-bgc;
+    border: 2px solid $form-border;
+  }
 }
