--- a/src/assets/stylesheets/myTheme/_breath.scss
+++ b/src/assets/stylesheets/myTheme/_breath.scss
@@ -1,8 +1,30 @@
 .breath {
   background-image: url("../images/myImages/bgc4.png");
+  &__container {
+    align-items: center;
+    @media (min-width: $screen-md-min) {
+      align-items: unset;
+    }
+  }
   &__wrapper {
-    min-height: 636px;
-    padding-top: 100px;
+    // min-height: 500px;
+    padding-top: 50px;
+    @media (min-width: $screen-md-min) {
+      min-height: 500px;
+      // padding-top: 100px;
+    }
+    @media (min-width: $screen-md-min) {
+      min-height: 636px;
+      padding-top: 100px;
+    }
+  }
+
+  &__description {
+    text-align: center;
+
+    @media (min-width: $screen-sm-min) {
+      text-align: left;
+    }
   }
   &__foto {
     position: relative;
@@ -12,7 +34,7 @@
       background-position: center;
       background-repeat: no-repeat;
       left: 50%;
-      top: 65%;
+      top: 80%;
       position: absolute;
       transform: translate(-50%, -50%);
       width: 100%;
@@ -20,8 +42,82 @@
       background-size: contain;
       z-index: 1;
     }
+    @media (min-width: $screen-sm-min) {
+      position: relative;
+      &::after {
+        content: "";
+        background-image: url("../images/myImages/bgc3.png");
+        background-position: center;
+        background-repeat: no-repeat;
+        left: 50%;
+        top: 80%;
+        position: absolute;
+        transform: translate(-50%, -50%);
+        width: 100%;
+        height: 100%;
+        background-size: contain;
+        z-index: 1;
+      }
+    }
+    @media (min-width: $screen-md-min) {
+      position: relative;
+      &::after {
+        content: "";
+        background-image: url("../images/myImages/bgc3.png");
+        background-position: center;
+        background-repeat: no-repeat;
+        left: 50%;
+        top: 50%;
+        position: absolute;
+        transform: translate(-50%, -50%);
+        width: 100%;
+        height: 100%;
+        background-size: contain;
+        z-index: 1;
+      }
+    }
+    @media (min-width: $screen-lg-min) {
+      position: relative;
+      &::after {
+        content: "";
+        background-image: url("../images/myImages/bgc3.png");
+        background-position: center;
+        background-repeat: no-repeat;
+        left: 50%;
+        top: 65%;
+        position: absolute;
+        transform: translate(-50%, -50%);
+        width: 100%;
+        height: 100%;
+        background-size: contain;
+        z-index: 1;
+      }
+    }
   }
   img {
-    margin: 90 0 170 0;
+    // margin: 90 0 170 0;
+  }
+  h3 {
+    margin: 0;
+    padding-bottom: 10px;
+    @media (min-width: $screen-md-min) {
+      padding-bottom: 20px;
+    }
+  }
+  p {
+    margin: 0;
+    padding-top: 10px;
+    padding-bottom: 20px;
+    @media (min-width: $screen-md-min) {
+      padding-top: 20px;
+      padding-bottom: 40px;
+    }
+  }
+  .btn-pink {
+    padding: 0 20px;
+    margin-bottom: 10px;
+    @media (min-width: $screen-md-min) {
+      padding: 10px 40px;
+    }
   }
 }
