--- a/src/assets/stylesheets/myTheme/_footer.scss
+++ b/src/assets/stylesheets/myTheme/_footer.scss
@@ -1,4 +1,21 @@
 .footer {
   background-color: $footer-grey;
   color: white;
+  p {
+    color: white;
+  }
+  h4 {
+    color: white;
+  }
+  h5 {
+    color: white;
+  }
+  i {
+    color: $text-grey;
+    background-color: white;
+    padding: 5px;
+    margin-right: 20px;
+    min-width: 24px;
+    text-align: center;
+  }
 }
