--- a/src/assets/stylesheets/myTheme/_levles.scss
+++ b/src/assets/stylesheets/myTheme/_levles.scss
@@ -1,7 +1,11 @@
 .levels {
+  &__container {
+    min-height: 300px;
+    padding-top: 60px;
+  }
   &__element {
-    display: flex;
-    flex-direction: column;
+    // display: flex;
+    // flex-direction: column;
     align-items: center;
     justify-content: center;
     // height: 50vh;
