--- a/src/assets/stylesheets/myTheme/_nav.scss
+++ b/src/assets/stylesheets/myTheme/_nav.scss
@@ -54,8 +54,9 @@
     transition: 0.1s all ease-in-out;
     &:hover {
       color: #444;
-      text-decoration: none;
-      font-weight: bold;
+      // text-decoration: ;
+      // font-weight: bold;
+      // background-color: $footer-grey;
     }
   }
   &__toggle {
