--- a/src/assets/stylesheets/myTheme/_breath.scss
+++ b/src/assets/stylesheets/myTheme/_breath.scss
@@ -22,6 +22,15 @@
     }
   }
   img {
-    margin: 90 0 170 0;
+    // margin: 90 0 170 0;
+  }
+  h3 {
+    margin: 0;
+    padding-bottom: 20px;
+  }
+  p {
+    margin: 0;
+    padding-top: 20px;
+    padding-bottom: 40px;
   }
 }
