--- a/src/assets/stylesheets/myTheme/_nav.scss
+++ b/src/assets/stylesheets/myTheme/_nav.scss
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 .navigation {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 99999;
+  background: white;
   &__container {
     background-color: white;
   }
