--- a/src/assets/stylesheets/myTheme/_levles.scss
+++ b/src/assets/stylesheets/myTheme/_levles.scss
@@ -1,17 +1,26 @@
 .levels {
   &__container {
-    min-height: 300px;
-    padding-top: 60px;
+    min-height: 240px;
+    padding-top: 10px;
+    @media (min-width: $screen-md-min) {
+      min-height: 300px;
+      padding-top: 60px;
+    }
   }
   &__element {
     // display: flex;
     // flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    // align-items: center;
+    // justify-content: center;
     // height: 50vh;
+    text-align: center;
   }
   &__photo {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
     text-align: center;
+    height: 115px;
     &::after {
       content: "";
       background-image: url("../images/myImages/Brush3.png");
@@ -28,6 +37,8 @@
     }
   }
   &__img {
-    width: 50%;
+    width: 150px;
+    margin: 0;
+    object-fit: contain;
   }
 }
