Adjusting content regarding notes

--- a/src/assets/stylesheets/myTheme/_galery.scss
+++ b/src/assets/stylesheets/myTheme/_galery.scss
@@ -35,4 +35,10 @@
   &__title {
     margin: 0;
   }
+  &__container-blog{
+    margin-top: 70px;
+    @media (min-width: $screen-md-min) {
+    margin-top: 100px;
+    }
+  }
 }
