--- a/src/assets/stylesheets/myTheme/_header.scss
+++ b/src/assets/stylesheets/myTheme/_header.scss
@@ -2,6 +2,10 @@
   background-image: url("../images/myImages/Design-header.png");
   background-size: cover;
   background-position-y: -22px;
+  margin-top: 67px;
+  @media (min-width: $screen-md-min) {
+  margin-top: 92px;
+  }
   //   height: 100vh;
 
   //   &__container {
