--- a/src/assets/stylesheets/myTheme/_video.scss
+++ b/src/assets/stylesheets/myTheme/_video.scss
@@ -34,4 +34,12 @@
       text-align: left;
     }
   }
+  &__container-training{
+    padding-top: 15px;
+    margin-top: 70px;
+    @media (min-width: $screen-md-min) {
+      padding-top: 30px;
+    margin-top: 100px;
+    }
+  }
 }
